# junior

./: Cargo.toml  README.md
src/: main.rs  system_prompt.md
src/tools/: append_file.rs  create_dir.rs  create_file.rs  delete_file.rs  mod.rs  move_file.rs  write_file.rs
