[package]
name = "junior"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
anyhow = "1.0"
toml = "0.8"
confy = "0.6"
shellexpand = "3"
regex = "1.11.1"
async-trait = "0.1.88"
trash = "5.2.2"
